--- a/templates/wego-app.yaml
+++ b/templates/wego-app.yaml
@@ -13,7 +13,7 @@ spec:
       serviceAccountName: wego-app-service-account
       containers:
         - name: wego-app
-          image: ghcr.io/weaveworks/wego-app:v0.6.1-19-g50df5e73
+          image: ghcr.io/weaveworks/wego-app:v0.6.2
           args: ["ui", "run", "-l", "--helm-repo-namespace", "wego-system"]
           ports:
             - containerPort: 9001
