--- a/wego-config.yaml
+++ b/wego-config.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 data:
   config: |
     FluxNamespace: flux-system
-    WegoNamespace: ""
+    WegoNamespace: wego-system
 kind: ConfigMap
 metadata:
   creationTimestamp: null
