--- a/templates/wego-app.yaml
+++ b/templates/wego-app.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wego-app
-  namespace: {{.Values.Namespace}}
+  namespace: {{.Values.namespace}}
 spec:
   replicas: 1
   template:
@@ -13,8 +13,8 @@ spec:
       serviceAccountName: wego-app-service-account
       containers:
         - name: wego-app
-          image: ghcr.io/weaveworks/wego-app:v0.6.2
-          args: ["ui", "run", "-l", "--helm-repo-namespace",{{.Values.Namespace}}]
+          image: "ghcr.io/weaveworks/wego-app:{{.Chart.AppVersion}}"
+          args: ["ui", "run", "-l", "--helm-repo-namespace",{{.Values.namespace}}]
           ports:
             - containerPort: 9001
               protocol: TCP
@@ -27,11 +27,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: read-resources
-  namespace: {{.Values.Namespace}}
+  namespace: {{.Values.namespace}}
 subjects:
   - kind: ServiceAccount
     name: wego-app-service-account
-    namespace: {{.Values.Namespace}}
+    namespace: {{.Values.namespace}}
 roleRef:
   kind: Role
   name: resources-reader
@@ -41,7 +41,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: resources-reader
-  namespace: {{.Values.Namespace}}
+  namespace: {{.Values.namespace}}
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -66,7 +66,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: wego-app-service-account
-  namespace: {{.Values.Namespace}}
+  namespace: {{.Values.namespace}}
 secrets:
   - name: wego-app-service-account-token
 ---
@@ -74,7 +74,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wego-app
-  namespace: {{.Values.Namespace}}
+  namespace: {{.Values.namespace}}
 spec:
   selector:
     app: wego-app
