--- a/wego-config.yaml
+++ b/wego-config.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 data:
   config: |
     FluxNamespace: flux-system
-    WegoNamespace: {{.Values.Namespace}}
+    WegoNamespace: {{.Values.namespace}}
 kind: ConfigMap
 metadata:
   creationTimestamp: null
   name: weave-gitops-config
-  namespace: {{.Values.Namespace}}
+  namespace: {{.Values.namespace}}
